--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <head>
 Hello World
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-  new Crate({
+  const crate = new Crate({
     server: '733309063160528996', // 🦉StrixMC
     channel: '733309064691580970' // #📖┊⸢general⸥
   })
+  
+  crate.notify('Nuestro discord!')
 </script>
 </head>
